@@ -176,7 +176,7 @@ extern "C"
 /* Error handling: error.c */
   extern const char *gsasl_strerror (int err);
 
-/* Utilities: base64.c, md5pwd.c */
+/* Utilities: base64.c, md5pwd.c, crypto.c */
   extern int gsasl_base64_encode (char const *src,
 				  size_t srclength,
 				  char *target, size_t targsize);
@@ -185,6 +185,11 @@ extern "C"
   extern int gsasl_md5pwd_get_password (const char *filename,
 					const char *username,
 					char *key, size_t * keylen);
+  extern int gsasl_nonce (char *data, size_t datalen);
+  extern int gsasl_random (char *data, size_t datalen);
+  extern int gsasl_md5 (const char *in, size_t inlen, char *out[16]);
+  extern int gsasl_hmac_md5 (const char *key, size_t keylen,
+			     const char *in, size_t inlen, char *outhash[16]);
 
 /* Callback prototypes */
   typedef int (*Gsasl_client_callback_anonymous) (Gsasl_session * sctx,
@@ -404,9 +409,6 @@ extern "C"
 						 void *application_data);
   extern void *gsasl_server_application_data_get (Gsasl_session_ctx * sctx);
   extern int gsasl_randomize (int strong, char *data, size_t datalen);
-  extern int gsasl_md5 (const char *in, size_t inlen, char *out[16]);
-  extern int gsasl_hmac_md5 (const char *key, size_t keylen,
-			     const char *in, size_t inlen, char *outhash[16]);
 
 #ifdef __cplusplus
 }
